FIND_PACKAGE(SWIG)
FIND_PACKAGE(PythonLibs)
IF(NOT SWIG_FOUND OR NOT PYTHONLIBS_FOUND)
    RETURN()
ENDIF()
INCLUDE(GrSwig)
INCLUDE(GrPython)

LIST(APPEND GR_SWIG_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include)
FOREACH(incdir ${GNURADIO_CORE_INCLUDE_DIRS})
    LIST(APPEND GR_SWIG_INCLUDE_DIRS ${incdir})
    LIST(APPEND GR_SWIG_INCLUDE_DIRS ${incdir}/swig)
ENDFOREACH(incdir)
FOREACH(incdir ${GRUEL_INCLUDE_DIRS})
    LIST(APPEND GR_SWIG_INCLUDE_DIRS ${incdir})
    LIST(APPEND GR_SWIG_INCLUDE_DIRS ${incdir}/gruel)
    LIST(APPEND GR_SWIG_INCLUDE_DIRS ${incdir}/gruel/swig)
ENDFOREACH(incdir)
LIST(APPEND GR_SWIG_INCLUDE_DIRS ${EVENTSTREAM_INCLUDE_DIRS})

LIST(APPEND GR_SWIG_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include/es)

link_directories(${EVENTSTREAM_LIBRARY_DIRS})
set(GR_SWIG_LIBRARIES eventstream)

GR_SWIG_MAKE(es_swig es_swig.i)

GR_SWIG_INSTALL(
    TARGETS es_swig
    DESTINATION ${GR_PYTHON_DIR}/es/
    COMPONENT "es_python"
)


GR_PYTHON_INSTALL(
    FILES __init__.py
    DESTINATION ${GR_PYTHON_DIR}/es/
    COMPONENT "es_python"
)

install(
    DIRECTORY ${CMAKE_SOURCE_DIR}/swig/
    DESTINATION include/es/swig COMPONENT "eventstream_devel"
    FILES_MATCHING 
    PATTERN "*.i" 
)


